# sql-agg

./: .coveragerc  .travis.yml  CHANGES.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  version.py
.github/workflows/: pypi.yml  tests.yml
queries/: alchemy_extensions.py  median.py
sqlagg/: __init__.py  base.py  columns.py  exceptions.py  filters.py  sorting.py  views.py
sqlagg/queries/: __init__.py  alchemy_extensions.py  median.py
tests/: __init__.py  fixtures.py  models.py  test_columns.py  test_filters.py  test_sorting.py  test_sqlagg.py  test_views.py  tests.py
